--- a/config/packages/sonata_seo.yaml
+++ b/config/packages/sonata_seo.yaml
@@ -16,7 +16,7 @@ sonata_seo:
                             'og:site_name': Paléolife
                             'og:description': Seb votre coach personnel. Coach sportif diplômé, expérimenté, passionné et bienveillant.
                             'og:title': Paléolife
-                            'og:url':  https://www.palolife-coaching.fr/
+                            'og:url':  https://www.paléolife-coaching.fr/
                             'og:type': website
                             'og:image': https://www.paléolife-coaching.fr/build/images/Logo.28577b1c.png
 
